--- a/index.html
+++ b/index.html
@@ -5,14 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
         <nav>
             <div class="container">
-                
+                <img src="./imgs//logo.svg" alt="logo">
+                <ul>
+                    <li>Home</li>
+                    <li>Menu</li>
+                    <li>Offers </li>
+                    <li>Service</li>
+                    <li>About Us</li>
+                </ul>
+                <div class="header-search">
+                    <i class="fa-solid fa-magnifying-glass fa-2xl"></i>
+                    <i class="fa-solid fa-user fa-2xl"></i>
+                </div>
             </div>
         </nav>
+        <div class="hero">
+           <div class="container">
+            <div class="hero-wrapper">
+                <div class="hero-left">
+                    <h1><span>Quick </span>and <span>Tasty</span> <br>
+                        <span>Food Delivered</span> with <span>a</span> <br>
+                        <span>Dash of</span> Speed</h1>
+                        <div class="buttons">
+                            <button class="button">Order Now</button>
+                            <button class="button">Track Order</button>
+                        </div>
+                </div>
+                <div class="hero-right">
+                    <img src="./imgs/hero-img.png" alt="img">
+                </div>
+            </div>
+            <div class="hero-bottom">
+                <div class="delivery">
+                    <img src="./imgs/delivery.png" alt="img">
+                    <div class="delivery-info">
+                        <h2>
+                            Fast Delivery
+                        </h2>
+                        <p>Promise To Deliver  <br> Within 30 Mins</p>
+                    </div>
+                </div>
+                <div class="delivery">
+                    <img src="./imgs/fresh.png" alt="img">
+                    <div class="delivery-info">
+                        <h2>
+                            Fast Delivery
+                        </h2>
+                        <p>Promise To Deliver  <br> Within 30 Mins</p>
+                    </div>
+                </div>
+                <div class="delivery">
+                    <img src="./imgs/delivery2.png" alt="img">
+                    <div class="delivery-info">
+                        <h2>
+                            Fast Delivery
+                        </h2>
+                        <p>Promise To Deliver  <br> Within 30 Mins</p>
+                    </div>
+                </div>
+                
+            </div>
+           </div>
+        </div>
     </header>
+    <main>
+        <section class="section-one">
+            <div class="container">
+                <h2>Our <span>Best Delivered </span> <br>
+                    Indian Dish</h2>
+                    <p>It’s Not Just About Bringing You Good Food <br> From Restaurants, We Deliver You Experience</p>
+            </div>
+        </section>
+        <section class="section-two">
+            <div class="container">
+                <div class="box">
+                    <img src="./imgs/dish1.png" alt="">
+                    <h3>    Indian Vegetable  <br>
+                        Pulao</h3>
+                        <button class="order">Order Now ></button>
+                </div>
+                <div class="box">
+                    <img src="./imgs/dish2.png" alt="">
+                    <h3>    Indian Vegetable  <br>
+                        Pulao</h3>
+                        <button class="order">Order Now ></button>
+                </div>
+                <div class="box">
+                    <img src="./imgs/dish3.png" alt="">
+                    <h3>    Indian Vegetable  <br>
+                        Pulao</h3>
+                        <button class="order">Order Now ></button>
+                </div>
+            </div>
+        </section>
+        <section class="section-three">
+            <img src="./imgs/star.png" alt="">
+            <h3>Rajasthan</h3>
+            <img src="./imgs/star.png" alt="">
+            <h3>South Indian</h3>
+            <img src="./imgs/star.png" alt="">
+            <h3>Gujarat </h3>
+            <img src="./imgs/star.png" alt="">
+            <h3>Maharashtra </h3>
+        </section>
+    </main>
 </body>
 </html>
